added sourceSetOfRequest to get calls in SourceTypeMap, to allow for multiple TypeInfo objects with the same FQN